# grpc_3d_objects

./: CMakeLists.txt  README.md  gen_proto.sh
client/: client.cpp  example_client.cpp  object_detection_client.cpp
client/include/: object_detection_client.h
client/include/grpc_3d_objects/: object_detection_client.h
protocol/: object_detection.proto
server/: example_server.py  object_detection_pb2.py  object_detection_pb2_grpc.py  server.py
